# deep-learning-noticias

./: README.md  pyproject.toml
models/: vectorizer.pkl
notebooks/: autocomplete.html  autocomplete.ipynb  build_model.ipynb  noticias_classification.html  noticias_classification.ipynb
notebooks/hypermodels/classification_optimization/: oracle.json
notebooks/hypermodels/classification_optimization/trial_0000/: trial.json
notebooks/hypermodels/classification_optimization/trial_0001/: checkpoint.weights.h5  trial.json
notebooks/hypermodels/classification_optimization/trial_0002/: checkpoint.weights.h5  trial.json
notebooks/hypermodels/classification_optimization/trial_0003/: checkpoint.weights.h5  trial.json
notebooks/hypermodels/classification_optimization/trial_0004/: trial.json
notebooks/hypermodels/classification_optimization/trial_0005/: trial.json
notebooks/hypermodels/classification_optimization/trial_0006/: checkpoint.weights.h5  trial.json
notebooks/hypermodels/classification_optimization/trial_0007/: trial.json
notebooks/hypermodels/classification_optimization/trial_0008/: checkpoint.weights.h5  trial.json
notebooks/hypermodels/classification_optimization/trial_0009/: checkpoint.weights.h5  trial.json
notebooks/hypermodels/classification_optimization/trial_0010/: trial.json
notebooks/hypermodels/classification_optimization/trial_0011/: trial.json
notebooks/hypermodels/classification_optimization/trial_0012/: trial.json
notebooks/hypermodels/classification_optimization/trial_0013/: trial.json
(+6 files in other folders)
