[tool.poetry]
name = "deep-learning-noticias"
version = "0.1.0"
description = ""
authors = ["ledsouza <leandro.souza.159@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.17.0"
tensorflow-metal = "^1.1.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
keras = "^3.4.1"
plotly = "^5.23.0"
nbformat = "^5.10.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
